fix profile top alignment

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ legend {
 }
 
 .profile-div-right {
+  vertical-align: top;
   width: 55%;
   display: inline-block;
   border: 1px dashed #bfbfbf;
@@ -129,6 +130,7 @@ legend {
   }
 
 .profile-div-left {
+  vertical-align: top;
   width: 35%;
   display: inline-block;
   margin-right: 4%;
